--- a/hub/src/Pages/Signup.scss
+++ b/hub/src/Pages/Signup.scss
@@ -7,6 +7,7 @@
 
 
   .signup__form {
+
     width: 50%;
     display: flex;
     flex-direction: column;
@@ -133,6 +134,8 @@
 
 @media only screen and (max-width: 992px) {
   .signup-container {
+    height: 100%;
+
     display: flex;
     flex-direction: column;
 
