--- a/hub/src/Pages/Header.scss
+++ b/hub/src/Pages/Header.scss
@@ -1,3 +1,10 @@
+.router_link {
+  color: white;
+  list-style: none;
+  text-decoration: none;
+  width: 100%;
+  overflow: hidden;
+}
 .header-container {
   width: 100%;
   height: 54px;
