--- a/hub/src/css/Header.scss
+++ b/hub/src/css/Header.scss
@@ -1,3 +1,5 @@
+
+//Link to function - from react
 .router_link {
   color: white;
   list-style: none;
@@ -5,6 +7,7 @@
   width: 100%;
   overflow: hidden;
 }
+
 .header-container {
   width: 100%;
   height: 54px;
@@ -16,8 +19,8 @@
   align-items: center;
 
   .header-container__left-nav {
-    padding-left: 100px;
-    width: 70%;
+    padding-left: 50px;
+    width: 80%;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -64,6 +67,7 @@
         color: white;
         display: flex;
         justify-content: flex-start;
+        z-index: 3;
 
         ul {
           width: 100%;
@@ -105,7 +109,7 @@
   }
 
   .header-container__right-nav {
-    padding-right: 100px;
+    padding-right: 50px;
 
 
     .header-container__right-nav__avatar {
