calling in users from the databse

--- a/hub/src/css/Tickets.scss
+++ b/hub/src/css/Tickets.scss
@@ -240,8 +240,11 @@
   width: 95%;
   height: 130px;
   background: white;
+  cursor: pointer;
+
   .ticketHolder-container__holder__list__card__description {
     color: #0091ae;
+    
   }
 
   .ticketHolder-container__holder__list__card__importance {
