--- a/hub/src/css/Tickets.scss
+++ b/hub/src/css/Tickets.scss
@@ -184,7 +184,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  height: 100vh;
+  max-height: 100vh;
   width: 60vw;
   background: rgba(45, 62, 80, 0.79);
   margin-top: -54px;
@@ -231,6 +231,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 90%;
+  overflow-y: scroll;
 
 .ticketHolder-container__holder__list__card {
   position: relative;
@@ -238,7 +240,7 @@
   border: 1px solid rgb(223, 227, 235);
   border-radius: 3px;
   width: 95%;
-  height: 130px;
+  min-height: 130px;
   background: white;
   cursor: pointer;
 
