--- a/hub/src/css/Tickets.scss
+++ b/hub/src/css/Tickets.scss
@@ -184,11 +184,11 @@
   position: absolute;
   top: 0;
   left: 0;
-  max-height: 100vh;
+  height: 100vh;
   width: 60vw;
   background: rgba(45, 62, 80, 0.79);
   margin-top: -54px;
-  z-index: 9;
+  z-index: 99;
 }
 
 
@@ -233,6 +233,14 @@
   align-items: center;
   height: 90%;
   overflow-y: scroll;
+
+  .ticketHolder-container__holder__list__old-tickets {
+    width: 100%;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+  }
 
 .ticketHolder-container__holder__list__card {
   position: relative;
