--- a/hub/src/css/Signup.scss
+++ b/hub/src/css/Signup.scss
@@ -2,8 +2,10 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 100%;
-  height: 100vh;
+  width: 70%;
+  height: 90%;
+  margin: 0 auto;
+  padding-top: 70px;
 
 
   .signup__form {
@@ -12,6 +14,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    .signup__form__form__name {
+      input {
+        width: 45%;
+      }
+    }
 
     button {
       width: 400px;
@@ -26,6 +34,7 @@
     .or {
       position: relative;
       padding-top: 35px;
+      color: #b0c1d4;
 
       padding-bottom: 35px;
 
@@ -36,9 +45,9 @@
       position: absolute;
       left: 30px;
       top: 50%;
-      width: 100px;
+      width: 180px;
       height: 1px;
-      background: lightgray;
+      background: #b0c1d4;
     }
 
 
@@ -47,15 +56,15 @@
       position: absolute;
       right: 30px;
       top: 50%;
-      width: 100px;
+      width: 180px;
       height: 1px;
-      background: lightgray;
+      background: #b0c1d4;
     }
 
 
     button.signup__form__button {
-      color: black;
-      background: lightgray;
+      color: gray;
+      background: #b0c1d4;
       border: none;
       height: 40px;
       width: 400px;
@@ -67,7 +76,7 @@
 
 
       img {
-        width: 20px;
+        width: 15px;
         padding-left: 15px;
       }
     }
@@ -82,7 +91,7 @@
 
     input {
       border: none;
-      border-bottom: 1px solid black;
+      border-bottom: 2px solid #3347;
       margin-bottom: 35px;
       font-size: .8rem;
       outline: none;
@@ -100,32 +109,41 @@
   }
 
   .incentive {
-    height: 100%;
+    height: 90%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+
+    p {
+      font-size: 1.2rem;
+      font-weight: bold;
+    }
 
     .incentive__holder {
       position: relative;
 
       img.incentive__image__holder__woman {
         position: relative;
-        width: 200px;
+        width: 400px;
         z-index: 3;
         padding-bottom: 35px;
 
       }
 
-      img.incentive__image__holder__blob {
+
+      img.incentive__image__holder__blob.two {
         position: absolute;
-        height: 500px;
-        top: 50%;
-        width: 600px;
-        margin-top: -250px;
-        left: 50%;
+        height: 800px;
+        top: 0%;
+        width: 720px;
+        margin-top: -210px;
+        left: 35%;
         margin-left: -300px;
         z-index: 1;
+        
       }
+
 
     }
   }
@@ -140,5 +158,58 @@
     flex-direction: column;
 
 } 
+
+}
+
+// Login
+
+.login-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  height: 100vh;
+  margin: 0 auto;
+
+
+
+  .login-container__form-container__form__contents__input {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 30px;
+
+    label {
+      padding-bottom: 8px;
+    }
+
+    input {
+      background: #f5f8fa;
+      border-radius: 3px;
+      border: 1px solid #cbd6e2;
+      width: 450px;
+      height: 40px;
+      outline: none;
+    }
+
+  }
+  button {
+    width: 450px;
+    height: 40px;
+    background: #f5f8fa;
+    border-radius: 3px;
+    border: none;
+    margin-bottom: 30px;
+    border-bottom: 1px solid #f5f8fa;
+
+  }
+
+  .login-line {
+    width: 450px;
+    height: 1px;
+    border-bottom: 1px solid #cbd6e2;
+    margin-bottom: 30px;
+
+  }
 
 }
