--- a/hub/src/css/Contacts.scss
+++ b/hub/src/css/Contacts.scss
@@ -1,7 +1,39 @@
+$textColor: #0091ae;
+$primaryColor: #ff7a59;
+
+.contact-container-whole {
+  min-height: 100%;
+
+}
+
 .contact-container {
-  padding-top: 75px;
+  padding-top: 35px;
   width: 92%;
   margin: 0 auto;
+
+  .contact-container__top__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    .contact-container__top__container__header {
+      color: $textColor;
+    }
+
+    .contact-container__top__container__button-container {
+
+      button {
+        background: $primaryColor;
+        border: none;
+        border-radius: 3px;
+        color: white;
+        width: 120px;
+        height: 35px;
+        cursor: pointer;
+
+      }
+    }
+  }
   
 
   .contact-container__contacts-list {
@@ -49,4 +81,137 @@
       }
     }
   }
+}
+
+
+//Contact Form
+.contacts-container__tickets-header-top__button-container__ticket-creator {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100vh;
+  overflow-y: scroll;
+  width: 40vw;
+  background: white;
+  z-index: 9;
+  margin-left: 150px;
+  z-index: 999;
+
+
+  .contacts-container__tickets-header-top__button-container__ticket-creator__banner {
+    position: sticky;
+    top: 0;
+    background-image: linear-gradient(-303deg, #00a4bd, #00afb2 56%, #00bda5);
+    min-height: 68px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    h4 {
+      padding-left: 50px;
+      margin: 0;
+      color: white;
+    }
+
+    img {
+      width: 20px;
+      color: white;
+      padding-right: 25px;
+      cursor: pointer;
+    }
+  }
+
+  .contacts-container__tickets-header-top__button-container__ticket-creator__form {
+    .contacts-container__tickets-header-top__button-container__ticket-creator__form__label-input {
+      width: 80%;
+      margin: 0 auto;
+  
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding-top: 20px;
+      label {
+        align-self: flex-start;
+        padding-bottom: 5px;
+        
+      }
+
+      input {
+        width: 100%;
+        height: 35px;
+        background: #f5f8fa;
+        border: 1px solid #cbd6e2;
+        outline: none;
+      }
+    }
+    .contacts-container__tickets-header-top__button-container__ticket-creator__form__company-info {
+      
+      margin-top: 40px;
+      margin-bottom: 90px;
+
+      border-top: 1px solid #cbd6e2;
+
+      h5 {
+        width: 80%;
+        margin: 0 auto;
+        margin-top: 40px;
+
+    
+      }
+    }
+
+    .contacts-container__tickets-header-top__button-container__ticket-creator__form__submit {
+      min-height: 68px;
+      width: 40%;
+      align-items: center;
+      background: #f5f8fa;
+      border-top: 1px solid #cbd6e2;
+      position: fixed;
+      bottom: 0;
+      display: flex;
+      justify-content: space-around;
+
+
+
+      button {
+        width: 150px;
+        height: 45px;
+        cursor: pointer;
+        border-radius: 3px;
+        font-size: 1.1rem;
+      }
+
+      .contacts-container__tickets-header-top__button-container__ticket-creator__form__submit__create {
+        border: none;
+        background: #ff7a59;
+
+
+      }
+
+            .contacts-container__tickets-header-top__button-container__ticket-creator__form__submit__create {
+              color: white;
+    }
+    .contacts-container__tickets-header-top__button-container__ticket-creator__form__submit__cancel {
+      border: 2px solid #ff7a59;
+      background: white;
+      color: #ff7a59;
+
+  }
+  }
+}
+
+
+}
+.contacts-container__tickets-header-top__button-container__ticket-creator-half {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 60vw;
+  background: rgba(45, 62, 80, 0.79);
+  z-index: 9;
+  filter: blur(3px);
+  border-top: 2px solid white;
+
 }
